@@ -117,18 +117,6 @@ See the variable `align-rules-list' for more details.")
                (cmd (if maxnum (concat cmd (format "[0...%s]" maxnum)) cmd)))
           (el4r-ruby-eval (format cmd (word-at-point) prefix prefix)))))))
 
-(setq completion-dynamic-syntax-alist
-  '(
-    ;; word constituents add to current completion
-    (?w . (add t word))
-    (?_ . (accept t none))
-    ;; whitespace and punctuation chars accept current completion
-    (?  . (accept t none))
-    (?. . (accept t none))
-    ;; anything else rejects the current completion
-    (t  . (reject t none))))
-
-
 ;; flymake ruby support
 
 (require 'flymake)
